Added form to enter github username.

--- a/mytest/ghuser_activity/templates/ghuser_activity/index.html
+++ b/mytest/ghuser_activity/templates/ghuser_activity/index.html
@@ -5,6 +5,17 @@
   <title>{{ title }}</title>
 </head>
 <body>
+  <h2>{{ title }}</h2>
   <h3>Functionality is coming soon.</h3>
+  <div>
+    <form action="/" method="post">
+      {% csrf_token %}
+      {{ form }}
+      <input type="submit" value="Get">
+    </form>
+  </div>
+  <div>
+    Username is: <b>{{ username }}</b>
+  </div>
 </body>
 </html>
